--- a/django_blog_project/templates/main.html
+++ b/django_blog_project/templates/main.html
@@ -10,6 +10,7 @@
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <!-- Icon - IconMonster -->
     <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css" />
     <!-- Mumble UI -->
     <link rel="stylesheet" href="{% static 'uikit/styles/uikit.css' %}" />
     <!-- Dev Search UI -->
@@ -19,9 +20,22 @@
 </head>
 <body>
     {% include 'navbar.html' %}
+
+    {% if messages %}
+
+    {% for message in messages %}
+    <div class="alert alert--{{message.tags}}" >
+        <p class="alert__message">{{message}}</p>
+        <button class="alert__close">x</button>
+    </div>
+    {% endfor %}
+
+    {% endif %}
+
     {% block content %}
 
     {% endblock %}
-    {% include 'footer.html' %}
 </body>
+<script src="{% static 'uikit/app.js' %}"></script>
+<script src="{% static 'js/main.js' %}"></script>
 </html>
