--- a/django_blog_project/users/templates/users/account.html
+++ b/django_blog_project/users/templates/users/account.html
@@ -64,7 +64,7 @@
               </td>
               <td class="settings__tableActions">
                 <a class="tag tag--pill tag--main settings__btn" href="{% url 'update-skill' skill.id %}"> Edit</a>
-                <a class="tag tag--pill tag--main settings__btn" href="{% url 'delete-skill' skill.id %}">Delete</a>
+                <a class="tag tag--pill tag--main settings__btn" href="{% url 'delete-skill' skill.id %}?next=/account">Delete</a>
               </td>
             </tr>
             {% endfor %}
@@ -89,7 +89,7 @@
               </td>
               <td class="settings__tableActions">
                 <a class="tag tag--pill tag--main settings__btn" href="{% url 'update_project' project.id %}"><i class="im im-edit"></i> Edit</a>
-                <a class="tag tag--pill tag--main settings__btn" href="{% url 'delete_project' project.id %}"><i class="im im-x-mark-circle-o"></i>
+                <a class="tag tag--pill tag--main settings__btn" href="{% url 'delete_project' project.id %}?next=/account"><i class="im im-x-mark-circle-o"></i>
                   Delete</a>
               </td>
             </tr>
