--- a/django_blog_project/projects/templates/projects/projects.html
+++ b/django_blog_project/projects/templates/projects/projects.html
@@ -10,15 +10,14 @@
         </div>
 
         <div class="hero-section__search">
-          <form class="form" action="{% url 'projects' %}" method="get">
-            <div class="form__field">
-              <label for="formInput#search">Search By Projects </label>
-              <input class="input input--text" id="formInput#search" type="text" name="search_query"
-                value="{{search_query}}" placeholder="Search by Project Title" />
-            </div>
-
-            <input class="btn btn--sub btn--lg" type="submit" value="Search" />
-          </form>
+           <form id='searchForm' class="form" action="{% url 'projects' %}" method="get">
+                    <div class="form__field">
+                        <label for="formInput#search">Search By Projects </label>
+                        <input class="input input--text" id="formInput#search" type="text" name="search_query"
+                            placeholder="Search by Project Title" value="{{search_query}}" />
+                    </div>
+                    <input class="btn btn--sub btn--lg" type="submit" value="Search" />
+                </form>
         </div>
       </div>
     </section>
