--- a/django_blog_project/users/templates/users/login_register.html
+++ b/django_blog_project/users/templates/users/login_register.html
@@ -66,7 +66,7 @@
               id="formInput#passowrd"
               type="password"
               name="password"
-              placeholder="••••••••"
+              placeholder="Enter your password..."
             />
           </div>
           <div class="auth__actions">
