--- a/django_blog_project/users/templates/users/profiles.html
+++ b/django_blog_project/users/templates/users/profiles.html
@@ -10,15 +10,15 @@
         </div>
 
         <div class="hero-section__search">
-          <form class="form" action="{% url 'profiles' %}" method="get">
-            <div class="form__field">
-              <label for="formInput#search">Search Developers </label>
-              <input class="input input--text" id="formInput#search" type="text" name="search_query"
-                value="{{search_query}}" placeholder="Search by developer name" />
-            </div>
+           <form id="searchForm" class="form" action="{% url 'profiles' %}" method="get">
+                    <div class="form__field">
+                        <label for="formInput#search">Search Developers </label>
+                        <input class="input input--text" id="formInput#search" type="text" name="search_query"
+                            value="{{search_query}}" placeholder="Search by developer name" />
+                    </div>
 
-            <input class="btn btn--sub btn--lg" type="submit" value="Search" />
-          </form>
+                    <input class="btn btn--sub btn--lg" type="submit" value="Search" />
+                </form>
         </div>
       </div>
     </section>
@@ -55,5 +55,8 @@
         </div>
       </div>
     </section>
-  </main>
+
+    {% include 'pagination.html' with queryset=profiles custom_range=custom_range %}
+
+</main>
 {% endblock %}
